<resources>
    <string name="app_name">Andriod_Learner</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="textview">TextView</string>
    <string name="hold">Hold</string>
    <string name="roll">Roll</string>
    <string name="reset">Reset</string>
    <string name="todo">TODO</string>
    <string name="country_hashmaps">Country Hashmaps</string>
    <string name="display_message">Display Message</string>
    <string name="appearance">Appearance</string>
    <string name="test_sensors">Test_Sensors</string>
    <string name="location_test">Location Test</string>
    <string name="available_sensors">Available Sensors</string>
    <string name="vendor">Vendor</string>
    <string name="minimum_delay">Minimum Delay</string>
    <string name="power">Power</string>
    <string name="max_range">Max Range</string>
    <string name="resolution">Resolution</string>
    <string name="version">Version</string>
    <string name="maximum_delay">Maximum Delay</string>
    <string name="accuracy">Accuracy</string>
    <string name="type">Type</string>
    <string name="value_changed">Value Changed</string>
    <string-array name="Ramu_Ka_Pariwar">
        <item>"Yash"</item>
        <item>"Harsh"</item>
        <item>"Shrey"</item>
        <item>"Suyash"</item>
        <item>"Rishi"</item>
        <item>"Lalu"</item>
        <item>"Khalu"</item>
        <item>"Sumeet"</item>
        <item>"Habu"</item>
    </string-array>
    <string-array name="Country_SNM">
        <item>"ABW"</item>
        <item>"AFG"</item>
        <item>"AGO"</item>
        <item>"AIA"</item>
        <item>"ALA"</item>
        <item>"ALB"</item>
        <item>"AND"</item>
        <item>"ARE"</item>
        <item>"ARG"</item>
        <item>"ARM"</item>
        <item>"ASM"</item>
        <item>"ATA"</item>
        <item>"ATF"</item>
        <item>"ATG"</item>
        <item>"AUS"</item>
        <item>"AUT"</item>
        <item>"AZE"</item>
        <item>"BDI"</item>
        <item>"BEL"</item>
        <item>"BEN"</item>
        <item>"BES"</item>
        <item>"BFA"</item>
        <item>"BGD"</item>
        <item>"BGR"</item>
        <item>"BHR"</item>
        <item>"BHS"</item>
        <item>"BIH"</item>
        <item>"BLM"</item>
        <item>"BLR"</item>
        <item>"BLZ"</item>
        <item>"BMU"</item>
        <item>"BOL"</item>
        <item>"BRA"</item>
        <item>"BRB"</item>
        <item>"BRN"</item>
        <item>"BTN"</item>
        <item>"BVT"</item>
        <item>"BWA"</item>
        <item>"CAF"</item>
        <item>"CAN"</item>
        <item>"CCK"</item>
        <item>"CHE"</item>
        <item>"CHL"</item>
        <item>"CHN"</item>
        <item>"CIV"</item>
        <item>"CMR"</item>
        <item>"COD"</item>
        <item>"COG"</item>
        <item>"COK"</item>
        <item>"COL"</item>
        <item>"COM"</item>
        <item>"CPV"</item>
        <item>"CRI"</item>
        <item>"CUB"</item>
        <item>"CUW"</item>
        <item>"CXR"</item>
        <item>"CYM"</item>
        <item>"CYP"</item>
        <item>"CZE"</item>
        <item>"DEU"</item>
        <item>"DJI"</item>
        <item>"DMA"</item>
        <item>"DNK"</item>
        <item>"DOM"</item>
        <item>"DZA"</item>
        <item>"ECU"</item>
        <item>"EGY"</item>
        <item>"ERI"</item>
        <item>"ESH"</item>
        <item>"ESP"</item>
        <item>"EST"</item>
        <item>"ETH"</item>
        <item>"FIN"</item>
        <item>"FJI"</item>
        <item>"FLK"</item>
        <item>"FRA"</item>
        <item>"FRO"</item>
        <item>"FSM"</item>
        <item>"GAB"</item>
        <item>"GBR"</item>
        <item>"GEO"</item>
        <item>"GGY"</item>
        <item>"GHA"</item>
        <item>"GIB"</item>
        <item>"GIN"</item>
        <item>"GLP"</item>
        <item>"GMB"</item>
        <item>"GNB"</item>
        <item>"GNQ"</item>
        <item>"GRC"</item>
        <item>"GRD"</item>
        <item>"GRL"</item>
        <item>"GTM"</item>
        <item>"GUF"</item>
        <item>"GUM"</item>
        <item>"GUY"</item>
        <item>"HKG"</item>
        <item>"HMD"</item>
        <item>"HND"</item>
        <item>"HRV"</item>
        <item>"HTI"</item>
        <item>"HUN"</item>
        <item>"IDN"</item>
        <item>"IMN"</item>
        <item>"IND"</item>
        <item>"IOT"</item>
        <item>"IRL"</item>
        <item>"IRN"</item>
        <item>"IRQ"</item>
        <item>"ISL"</item>
        <item>"ISR"</item>
        <item>"ITA"</item>
        <item>"JAM"</item>
        <item>"JEY"</item>
        <item>"JOR"</item>
        <item>"JPN"</item>
        <item>"KAZ"</item>
        <item>"KEN"</item>
        <item>"KGZ"</item>
        <item>"KHM"</item>
        <item>"KIR"</item>
        <item>"KNA"</item>
        <item>"KOR"</item>
        <item>"KWT"</item>
        <item>"LAO"</item>
        <item>"LBN"</item>
        <item>"LBR"</item>
        <item>"LBY"</item>
        <item>"LCA"</item>
        <item>"LIE"</item>
        <item>"LKA"</item>
        <item>"LSO"</item>
        <item>"LTU"</item>
        <item>"LUX"</item>
        <item>"LVA"</item>
        <item>"MAC"</item>
        <item>"MAF"</item>
        <item>"MAR"</item>
        <item>"MCO"</item>
        <item>"MDA"</item>
        <item>"MDG"</item>
        <item>"MDV"</item>
        <item>"MEX"</item>
        <item>"MHL"</item>
        <item>"MKD"</item>
        <item>"MLI"</item>
        <item>"MLT"</item>
        <item>"MMR"</item>
        <item>"MNE"</item>
        <item>"MNG"</item>
        <item>"MNP"</item>
        <item>"MOZ"</item>
        <item>"MRT"</item>
        <item>"MSR"</item>
        <item>"MTQ"</item>
        <item>"MUS"</item>
        <item>"MWI"</item>
        <item>"MYS"</item>
        <item>"MYT"</item>
        <item>"NAM"</item>
        <item>"NCL"</item>
        <item>"NER"</item>
        <item>"NFK"</item>
        <item>"NGA"</item>
        <item>"NIC"</item>
        <item>"NIU"</item>
        <item>"NLD"</item>
        <item>"NOR"</item>
        <item>"NPL"</item>
        <item>"NRU"</item>
        <item>"NZL"</item>
        <item>"OMN"</item>
        <item>"PAK"</item>
        <item>"PAN"</item>
        <item>"PCN"</item>
        <item>"PER"</item>
        <item>"PHL"</item>
        <item>"PLW"</item>
        <item>"PNG"</item>
        <item>"POL"</item>
        <item>"PRI"</item>
        <item>"PRK"</item>
        <item>"PRT"</item>
        <item>"PRY"</item>
        <item>"PSE"</item>
        <item>"PYF"</item>
        <item>"QAT"</item>
        <item>"REU"</item>
        <item>"ROU"</item>
        <item>"RUS"</item>
        <item>"RWA"</item>
        <item>"SAU"</item>
        <item>"SDN"</item>
        <item>"SEN"</item>
        <item>"SGP"</item>
        <item>"SGS"</item>
        <item>"SHN"</item>
        <item>"SJM"</item>
        <item>"SLB"</item>
        <item>"SLE"</item>
        <item>"SLV"</item>
        <item>"SMR"</item>
        <item>"SOM"</item>
        <item>"SPM"</item>
        <item>"SRB"</item>
        <item>"SSD"</item>
        <item>"STP"</item>
        <item>"SUR"</item>
        <item>"SVK"</item>
        <item>"SVN"</item>
        <item>"SWE"</item>
        <item>"SWZ"</item>
        <item>"SXM"</item>
        <item>"SYC"</item>
        <item>"SYR"</item>
        <item>"TCA"</item>
        <item>"TCD"</item>
        <item>"TGO"</item>
        <item>"THA"</item>
        <item>"TJK"</item>
        <item>"TKL"</item>
        <item>"TKM"</item>
        <item>"TLS"</item>
        <item>"TON"</item>
        <item>"TTO"</item>
        <item>"TUN"</item>
        <item>"TUR"</item>
        <item>"TUV"</item>
        <item>"TZA"</item>
        <item>"UGA"</item>
        <item>"UKR"</item>
        <item>"UMI"</item>
        <item>"URY"</item>
        <item>"USA"</item>
        <item>"UZB"</item>
        <item>"VAT"</item>
        <item>"VCT"</item>
        <item>"VEN"</item>
        <item>"VGB"</item>
        <item>"VIR"</item>
        <item>"VNM"</item>
        <item>"VUT"</item>
        <item>"WLF"</item>
        <item>"WSM"</item>
        <item>"YEM"</item>
        <item>"ZAF"</item>
        <item>"ZMB"</item>
        <item>"ZWE"</item>
    </string-array>
</resources>